Closed
Bug 822115
Opened 13 years ago
Closed 13 years ago
nglayout.debug.widget_update_flashing pref cache is not thread safe
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: romaxa, Assigned: romaxa)
References
Details
Attachments
(1 file)
|
3.36 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
Assertion failure: _mOwningThread.GetThread() == PR_GetCurrentThread() (ValueObserver not thread-safe), at modules/libpref/src/Preferences.cpp:131
I have browser with OMTC enabled and BasicLayerManager::FlashWidgetUpdateArea first time called from Compositor Thread (create observer for nglayout.debug.widget_update_flashing)
and when gecko is shutting down, it removes all observers from GeckoThread. which cause assertion above.
| Assignee | ||
Comment 1•13 years ago
|
||
Move pref observer initialization to gfxPlatform::Init which is guaranteed to be called in Gecko thread.
Updated•13 years ago
|
Attachment #692765 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
| Assignee | ||
Comment 3•13 years ago
|
||
Comment 4•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in
before you can comment on or make changes to this bug.
Description
•