Bug 822115 - nglayout.debug.widget_update_flashing pref cache is not thread safe. r=mattwoodrow